[package]
name = "weyland-p5000"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustix = { version = "0.38.25", features = ["event", "net", "fs"] }

[[bin]]
name = "p5wl"
path = "src/main.rs"
